--- a/style.css
+++ b/style.css
@@ -285,17 +285,21 @@ body {
   border: none;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 900px) {
+  .layout {
+    flex-wrap: wrap;
+  }
+
   .combat-tracker {
-    width: 320px;
+    position: relative;
+    width: 100%;
+    max-height: 50vh;
+    border-left: none;
+    border-top: 3px solid #000;
+    margin-left: 0;
   }
 }
 
-@media (max-width: 1024px) {
-  #statblock {
-    padding: 20px;
-  }
-}
 /* Group styling */
 .group {
   border: 2px solid #000;
@@ -566,5 +570,6 @@ body {
   font-weight: bold;
   text-align: center;
 }
+
 
 
